[package]
name = "user_create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "user_create"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
anyhow = "1.0.68"
serde = "1.0.130"
clap = { version = "4.0.27", features = ["derive"] }
dialoguer = "0.10.2"
